--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,10 @@
 {
-    "name": "socialiteproviders/weixin",
-    "description": "Weixin OAuth2 Provider for Laravel Socialite",
+    "name": "socialiteproviders/weixin-mini",
+    "description": "Weixin-Mini OAuth2 Provider for Laravel Socialite",
     "license": "MIT",
     "authors": [{
-        "name": "xyxu",
-        "email": "techxu@gmail.com"
-    }, {
-        "name": "xiami",
-        "email": "jhdxr@php.net"
+        "name": "Jethro",
+        "email": "tech@dghang.com"
     }],
     "require": {
         "php": "^5.6 || ^7.0",
@@ -15,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "SocialiteProviders\\Weixin\\": ""
+            "SocialiteProviders\\WeixinMini\\": ""
         }
     }
 }
